timeline - adding the timeline to the header in the dom to avoid z-index issues with popup overlays and labels

--- a/src/components/button-circular/button-circular.scss
+++ b/src/components/button-circular/button-circular.scss
@@ -161,7 +161,7 @@
 
 .button-circular__label {
   position: absolute;
-  z-index: 100;
+  z-index: 9999;
   left: 50%;
   top: 100%;
   font-size: rem(11px);
